# wordle-thing

./: Cargo.toml  README.md
src/: main.rs
